Implemented scrolling view in Make_performance activity that looks like the original paper form.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,24 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="våningsplan">
+        <item>Våningsplan</item>
+        <item>1</item>
+        <item>1.5</item>
+        <item>2</item>
+        <item>2.5</item>
+        <item>3</item>
+        <item>3.5</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+    </string-array>
+
+    <string-array name="typ">
+        <item>typ</item>
+        <item>Etage</item>
+        <item>Souterräng</item>
+    </string-array>
+
 </resources>
